--- a/solaniwa/cs/style.css
+++ b/solaniwa/cs/style.css
@@ -46,7 +46,7 @@ span.pc{
 	top: 0;
 	display: none;
     height: 100%;
-    width: 0;
+    width: 165px;
     padding: 15px;
     box-sizing: border-box;
     background: rgba(195, 13, 35, 1);
@@ -54,9 +54,10 @@ span.pc{
     font-size: 15px;
     right: -165px;
     text-transform: uppercase;
-    transition: .5s ease;
+    transition: .2s ease;
     color: #fff;
 	padding: 12px;
+	display: flex;
 }
 p{
 	position: absolute;
@@ -70,7 +71,7 @@ p img{
 .fixed-nav a:hover span.pc{
 	right: 0;
 	display: block;
-	width: 165px
+	
 	
 	
 }
