--- a/baitap hieu ung button icon/css/style.css
+++ b/baitap hieu ung button icon/css/style.css
@@ -23,6 +23,7 @@
     font-size: 18px;
     font-family: "Roboto Slab", serif;
     color: #ffffff;
+    transition: 1s ease;
 }
 
 .fixed-nav .icon-box .content,
@@ -30,7 +31,7 @@
     position: absolute;
     text-align: center;
     animation-duration: 0.34s;
-    transition: .5s ease;
+    /* transition: .5s ease; */
 }
 
 .fixed-nav .icon-box .content {
@@ -48,7 +49,7 @@
     display: none;
     z-index: 1;
     background: #ed1c24;
-    transition: .5s ease;
+    /* transition: .5s ease; */
 }
 
 .fixed-nav .icon-box:hover .content {
