--- a/css/airbanbBooststrap.css
+++ b/css/airbanbBooststrap.css
@@ -43,12 +43,13 @@ body {
     margin: 0 auto;
 }
 header#header{
-    background-image: url("https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg");
+   /*  background-image: url("https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg"); */
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     max-height: 100%;
     position: relative;/***/
+    background-color: blue!important;
 }
 a.a-svg-header {
     display: inline-block !important;
@@ -462,8 +463,15 @@ div#conent{
     margin-right: 0px;
     margin-top: 62px;
 }
+[class="col-"]{
+    padding-left: 8px;
+    padding-right: 8px;
+}
  @media  screen and (min-width: 768px)
 {
+    header#header {
+        background-image: url(https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg)!important;
+    }
     .container {
         max-width: 1080px;
         padding-left: 24px!important;
@@ -501,6 +509,9 @@ div#conent{
 }
 @media  screen and (min-width: 1024px)
 {
+    header#header {
+        background-image: url(https://a0.muscache.com/4ea/air/r:w775-h300-sfit,e:fjpg-c70/pictures/c49d2d28-c0ae-484b-9db9-0dc93a5e1cd4.jpg)!important;
+    }
     .container{
     max-width: 1080px;
     padding-left: 24px!important;
