--- a/Nhom4_Kempinki/src/views/index.pug
+++ b/Nhom4_Kempinki/src/views/index.pug
@@ -8,7 +8,7 @@ block content
 
   //- Desktop page
   section.page.home__page
-    h1.page__title # Index page3
+    h1.page__title # Index Homepage
 
     ul(style="list-style: disc; padding-left: 4rem; margin: 4rem 0")
       each val, index in pages
