--- a/DiscoveryRoyalty/src/views/layouts/master.pug
+++ b/DiscoveryRoyalty/src/views/layouts/master.pug
@@ -48,7 +48,7 @@ html(lang='jp')
 
   body
     //- header
-
+    include ../components/header/header.pug
 
     //- block content
     block content
