--- a/DiscoveryRoyalty/src/views/components/header/header.pug
+++ b/DiscoveryRoyalty/src/views/components/header/header.pug
@@ -1,58 +1,38 @@
-header
-    .header
-        .container-fluid
-            .row.between-xs
-                .col-xs-7.col-sm-4
-                    a.header__view-request(href="#")
-                        img(src= ("../../../assets/images/logo-header-white.png"), alt="Village House")
-                .col-xs-2.col-sm-8
-                    .navigation
-                        .navigation__layout
-                        button.btn-default.navigation__hamburger-btn
-                            span.icon-hamburger
-                        nav
-                            .navigation__close-button
-                                button.btn-default Close
-                                    span.icon-close
-                            ul.navigation__nav-bar
-                                li
-                                    a(href="#") Home
-                                li
-                                    a.shortlist(href="#") Shortlist
-                                li
-                                    a(href="#") Promotions
-                                li
-                                    a(href="#") FAQ
-                                li
-                                    a(href="#") For Brokers
-                                li
-                                    button.btn-default#dropdownLanguageBtn(for="languageToggleInput")
-                                        | English
-                                        span.icon-arrow
-                                    ul#dropdownLanguageList
-                                        li.lang__active
-                                            a(href="#") English
-                                        li
-                                            a(href="#") 日本語
-                                        li
-                                            a(href="#") Português
-                            .navigation__requestview-btn
-                                a.btn-default(href="javascript:void(0)", data-micromodal-trigger="modalRequestForm")
-                                    span.icon-clock
-                                    | Request Viewing
-    .header__top-row
-        .container-fluid
-            .row.end-xs.middle-xs
-                .col-xs-12.col-sm-8
-                    a.header__top-row__enquire-now(href="javascript:void(0)", data-micromodal-trigger="modalRequestForm")
-                        span.icon-email
-                        | Enquire Now
-                    .header__top-row__contact-info
-                        span.icon-phone
-                        span.header__top-row__contact-info__detail__call Call
-                        a.header__top-row__contact-info__detail__number(href="tel:0120-830-105") 0120-830-105
-                    span.is-time From 09:00 to 21:00
-    input#sdfStartWorkingHour(type="hidden", value="09:00", name="sdfStartWorkingHour")
-    input#sdfStopWorkingHour(type="hidden", value="20:00", name="sdfStopWorkingHour")
-    input#emailRegexFormMsg(type="hidden", value="We require a valid email addressabc")
-    input#requiredFormMsg(type="hidden", value="Please fill in this fieldabc")
+
+.head
+    #navbar
+        .topnav-container
+            .logo-icon
+                a(href="#homepage")
+                    img(src="../../../assets/images/site-logo.svg" alt="logo")
+
+            .topnav-item-container
+                .language
+                    .dropdown
+                        button.dropbtn(onclick='myFunction()') ENGLISH
+                        i.fas.fa-caret-down(style='color: #AC975E;')
+                        #myDropdown.dropdown-content
+                            a(href='#home') Home
+                            a(href='#about') About
+                            a(href='#contact') Contact
+                .clear
+                .nav-items
+                    a.nav-item(href="#") SPECIAL OFFERS
+                    a.nav-item(href="#") DESTINATIONS
+                    a.nav-item(href="#") HOTEL BRANDS
+                    a.nav-item(href="#") MEMBERSHIP BENEFITS
+                    a.nav-item(href="#") FIND LOCAL EXPERIENCES
+        .sticky-nav
+            .sticky-nav-content
+                .search-group
+                    button.search-button find hotels
+                    span.Icon.Icon--search
+                .clear
+                .sign-in
+                    .sign-in-items
+                        a.ii(href="#") SIGN-IN
+                        a.ii(href="#") JOIN
+                        a.ii(href="#") MY RESERVATIONS
+
+
+        
