--- a/DiscoveryRoyalty/src/views/index.pug
+++ b/DiscoveryRoyalty/src/views/index.pug
@@ -1,7 +1,7 @@
 extends ./layouts/master.pug
 
 block title
-  title My Page - Index
+  title DISCOVERY
 
 block content
   - var pages = { homePage: '/homepage', testPage: '/test'  }
