--- a/DiscoveryRoyalty/src/views/components/header/header.scss
+++ b/DiscoveryRoyalty/src/views/components/header/header.scss
@@ -1,4 +1,4 @@
-@media all and (min-width:1024px){
+
     #navbar {
         background-color: #2E2C2C;
         position: fixed;
@@ -17,7 +17,7 @@
 
     .logo-icon {
         margin-top: 30px;
-        width: 20%;
+        width: 100%;
     }
 
     .topnav-item-container {
@@ -71,9 +71,10 @@
     }
 
       .nav-items {
-          display: inline-block;
+          display: flex;
           float: right;
           margin-top: 5px;
+          margin-bottom: 10px;
       }
 
       .nav-item {
@@ -98,11 +99,8 @@
         display: flex;
       }
 
-      .search-group {
-        width: 60%;
-      }
-
       .search-button {
+        width: 100%;
         border: none;
         text-transform: uppercase;
         background: transparent;
@@ -110,7 +108,6 @@
         font-size: 15px;
         font-weight: 500;
         color: white;
-        float: left;
         cursor: pointer;
         padding-top: 5px;
       }
@@ -118,11 +115,10 @@
       .sign-in {
         display: inline-block;
         margin: 20px 0px 20px 0px;
+        float: right;
       }
 
-      .sign-in-items {
-        margin-left: 89px;
-      }
+      
      
       .ii {
         font-size: 12px;
@@ -132,7 +128,6 @@
         color: #ac9760;
         padding-left: 20px;
       }
-}
 
 .clear {
     clear:both;
