--- a/renovation/src/views/index.pug
+++ b/renovation/src/views/index.pug
@@ -1,10 +1,10 @@
 extends ./layouts/master.pug
 
 block title
-  title My Page - Index
+  title Renovation
 
 block content
-  - var pages = { homePage: '/homepage', testPage: '/test'  }
+  - var pages = { homePage: '/homepage', testPage: '/test' }
 
   //- Desktop page
   section.page.home__page
