--- a/renovation/src/views/pages/homepage.pug
+++ b/renovation/src/views/pages/homepage.pug
@@ -10,5 +10,8 @@ block basicSeo
 
 block content
 
+
   //- Desktop page
   section.page.home__page
+    h2 
+      a(href="http://kenh14.vn") indexPage
