--- a/renovation/src/assets/styles/base/_global.scss
+++ b/renovation/src/assets/styles/base/_global.scss
@@ -16,7 +16,7 @@ body {
     font-size: 1.6rem;
     font-weight: fontWeight(regular);
     color: $text-color-primary;    
-    padding-top: 60px;
+    // padding-top: 60px;
     line-height: 2.3rem;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
