--- a/renovation/src/views/components/header/header.pug
+++ b/renovation/src/views/components/header/header.pug
@@ -1,58 +1,65 @@
+
 header
-    .header
-        .container-fluid
-            .row.between-xs
-                .col-xs-7.col-sm-4
-                    a.header__view-request(href="#")
-                        img(src= ("../../../assets/images/logo-header-white.png"), alt="Village House")
-                .col-xs-2.col-sm-8
-                    .navigation
-                        .navigation__layout
-                        button.btn-default.navigation__hamburger-btn
-                            span.icon-hamburger
-                        nav
-                            .navigation__close-button
-                                button.btn-default Close
-                                    span.icon-close
-                            ul.navigation__nav-bar
+    .bgr_header
+        .width_container
+            //- .logo_web
+            //-     a(href="index.pug" title="Renovation")
+            //-         img.default_logo(src="https://f71lt0q191r215mt-zippykid.netdna-ssl.com/wp-content/themes/renovation-progression/images/logo.png" alt="Renovation")
+            .wrap_grid_menu
+                .grid_menu
+                    .nav_container
+                        .menu_left
+                            ul.menu_left_lv1
                                 li
-                                    a(href="#") Home
+                                    a(href="#") home
                                 li
-                                    a.shortlist(href="#") Shortlist
+                                    a(href="#") shop
                                 li
-                                    a(href="#") Promotions
+                                    a(href="#") services
                                 li
-                                    a(href="#") FAQ
+                                    a(href="#") portfolio
+            .wrap_grid_menu
+                .grid_menu
+                    .nav_container
+                        .menu_left
+                            ul.menu_left_lv1
                                 li
-                                    a(href="#") For Brokers
+                                    a(href="#") testimonials
                                 li
-                                    button.btn-default#dropdownLanguageBtn(for="languageToggleInput")
-                                        | English
-                                        span.icon-arrow
-                                    ul#dropdownLanguageList
-                                        li.lang__active
-                                            a(href="#") English
-                                        li
-                                            a(href="#") 日本語
-                                        li
-                                            a(href="#") Português
-                            .navigation__requestview-btn
-                                a.btn-default(href="javascript:void(0)", data-micromodal-trigger="modalRequestForm")
-                                    span.icon-clock
-                                    | Request Viewing
-    .header__top-row
-        .container-fluid
-            .row.end-xs.middle-xs
-                .col-xs-12.col-sm-8
-                    a.header__top-row__enquire-now(href="javascript:void(0)", data-micromodal-trigger="modalRequestForm")
-                        span.icon-email
-                        | Enquire Now
-                    .header__top-row__contact-info
-                        span.icon-phone
-                        span.header__top-row__contact-info__detail__call Call
-                        a.header__top-row__contact-info__detail__number(href="tel:0120-830-105") 0120-830-105
-                    span.is-time From 09:00 to 21:00
-    input#sdfStartWorkingHour(type="hidden", value="09:00", name="sdfStartWorkingHour")
-    input#sdfStopWorkingHour(type="hidden", value="20:00", name="sdfStopWorkingHour")
-    input#emailRegexFormMsg(type="hidden", value="We require a valid email addressabc")
-    input#requiredFormMsg(type="hidden", value="Please fill in this fieldabc")
+                                    a(href="#") latest
+                                li
+                                    a(href="#") services
+                                li
+                                    a(href="#") portfolio
+            .colum_icon_mobi
+                .mobile_menu.mobile_menu_icon
+    .wrapp_menu_mobile
+        .menu_mobile
+            ul.ul_menu_lv1
+                li.menu_lv1
+                    a.link_menu_lv1(href="#") home
+                li.menu_lv1
+                    a.link_menu_lv1(href="#") shop
+                    span.btn_menu_lv2
+                    //--menu 2
+                    ul.ul_menu_lv2
+                        li.menu_lv2
+                            a.link_menu_lv2(href="#") 
+                                span.icon_account my account
+                        li.menu_lv2
+                            a.link_menu_lv2(href="#")
+                                span.icon_cart shopping cart
+                        li.menu_lv2
+                            a.link_menu_lv2(href="#")
+                                span.icon_checkout checkout
+                    //-->
+                li.menu_lv1
+                    a.link_menu_lv1(href="#") services
+                li.menu_lv1
+                    a.link_menu_lv1(href="#") portfolio
+                li.menu_lv1
+                    a.link_menu_lv1(href="#") testimonials
+                li.menu_lv1
+                    a.link_menu_lv1(href="#") latestnews
+                li.menu_lv1
+                    a.link_menu_lv1(href="#") contact us
