--- a/renovation/src/views/components/portfolio/portfolio.pug
+++ b/renovation/src/views/components/portfolio/portfolio.pug
@@ -12,8 +12,8 @@ section.portfolio_area.p_100
           a(href='#') New Construction
         li(data-filter='.residential')
           a(href='#') Residential
-    .row.grid_portfolio_area.imageGallery1
-      .col-md-4.col-6.commercial.landscaping
+    .row.grid_portfolio_area
+      .col-md-4.col-sm-6.col-12.commercial.landscaping
         .portfolio_item
           .portfolio_img
             a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
@@ -21,67 +21,67 @@ section.portfolio_area.p_100
           .portfolio_text
             a(href='#')
               h4 Kitchen
-      .col-md-4.col-6.landscaping.residential
+      .col-lg-4.col-sm-6.col-12.landscaping.residential
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            a.light(href='../../../assets/images/portfolio-2-1024x512.jpg')
+              img.img-fluid(src='../../../assets/images/portfolio-2-1024x512.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
-      .col-md-4.col-6.commercial.residential
+      .col-lg-4.col-sm-6.col-12.commercial.residential
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            a.light(href='../../../assets/images/portfolio-3-1024x576.jpg')
+              img.img-fluid(src='../../../assets/images/portfolio-3-1024x576.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
-      .col-md-4.col-6.commercial.residential
+      .col-lg-4.col-sm-6.col-12.commercial.residential
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            a.light(href='../../../assets/images/portfolio-4.jpg')
+              img.img-fluid(src='../../../assets/images/portfolio-4.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
-      .col-md-4.col-6.landscaping.newconstruction
+      .col-lg-4.col-sm-6.col-12.landscaping.newconstruction
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            a.light(href='../../../assets/images/portoflio-5.jpg')
+              img.img-fluid(src='../../../assets/images/portoflio-5.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
-      .col-md-4.col-6.newconstruction.residential
+      .col-lg-4.col-sm-6.col-12.newconstruction.residential
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            a.light(href='../../../assets/images/Brown-Residence.jpg')
+              img.img-fluid(src='../../../assets/images/Brown-Residence.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
-      .col-md-4.col-6.landscaping
+      .col-lg-4.col-sm-6.col-12.landscaping
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            a.light(href='../../../assets/images/portfolio-7.jpg')
+              img.img-fluid(src='../../../assets/images/portfolio-7.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
-      .col-md-4.col-6.newconstruction
+      .col-lg-4.col-sm-6.col-12.newconstruction
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            a.light(href='../../../assets/images/Smith-residence.jpg')
+              img.img-fluid(src='../../../assets/images/Smith-residence.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
-      .col-md-4.col-6.landscaping.newconstruction
+      .col-lg-4.col-sm-6.col-12.landscaping.newconstruction
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            a.light(href='../../../assets/images/landscaping-1.jpg')
+              img.img-fluid(src='../../../assets/images/landscaping-1.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
