--- a/renovation/src/views/components/portfolio/portfolio.scss
+++ b/renovation/src/views/components/portfolio/portfolio.scss
@@ -1,8 +1,7 @@
-/*----------------------------------------------------*/
-
-
-/* Portfolio Area css
-============================================================================================ */
+.container {
+    padding: 0 10%;
+    width: 100%;
+}
 
 .portfolio_filter {
     text-align: center;
@@ -56,6 +55,7 @@
 
 .grid_portfolio_area {
     margin-bottom: -35px;
+    // padding: 0 10%;
 }
 
 .portfolio_item {
@@ -73,6 +73,8 @@
     display: block;
     position: relative;
     max-width: 100%;
+    display: block;
+    padding-top: 62.5%
 }
 
 .portfolio_item .portfolio_img a:before {
@@ -98,6 +100,11 @@
     -o-transition: all 300ms ease;
     transition: all 300ms ease;
     max-width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .portfolio_item .portfolio_text h4 {
@@ -125,32 +132,3 @@
     transform: scale(1.05);
     max-width: 100%;
 }
-
-.portfolio_full {
-    padding-right: 15px;
-    padding-left: 15px;
-}
-
-.portfolio_full_width_area {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-}
-
-.portfolio_full_width_area .portfolio_full_item {
-    padding-left: 15px;
-    padding-right: 15px;
-    -webkit-box-flex: 0;
-    -ms-flex: 0 0 20%;
-    flex: 0 0 20%;
-    max-width: 20%;
-}
-
-
-/* End Portfolio Area css
-  ============================================================================================ */
-
-
-/*---------------------------------------------------- */
