--- a/leaterup-master/src/assets/styles/base/_global.scss
+++ b/leaterup-master/src/assets/styles/base/_global.scss
@@ -1,5 +1,5 @@
 * {
-    font-family: $font-main;
+    font-family: Overpass;
     box-sizing: border-box;
 }
 
@@ -11,17 +11,20 @@
 html {
     font-size: $fz-root; // root font-size, DO NOT CHANGE
 }
-
+.leatherwidth{
+    width: 1180px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
 body {
     font-size: 1.6rem;
     font-weight: fontWeight(regular);
     color: $text-color-primary;    
-    padding-top: 60px;
     line-height: 2.3rem;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
     @include not-mobile {
-        padding-top: 90px;
+        
     }
     
     &.body__is__nav-open {
