--- a/leaterup-master/src/views/components/header/header.pug
+++ b/leaterup-master/src/views/components/header/header.pug
@@ -1,58 +1,49 @@
 header
-    .header
-        .container-fluid
-            .row.between-xs
-                .col-xs-7.col-sm-4
-                    a.header__view-request(href="#")
-                        img(src= ("../../../assets/images/logo-header-white.png"), alt="Village House")
-                .col-xs-2.col-sm-8
-                    .navigation
-                        .navigation__layout
-                        button.btn-default.navigation__hamburger-btn
-                            span.icon-hamburger
-                        nav
-                            .navigation__close-button
-                                button.btn-default Close
-                                    span.icon-close
-                            ul.navigation__nav-bar
-                                li
-                                    a(href="#") Home
-                                li
-                                    a.shortlist(href="#") Shortlist
-                                li
-                                    a(href="#") Promotions
-                                li
-                                    a(href="#") FAQ
-                                li
-                                    a(href="#") For Brokers
-                                li
-                                    button.btn-default#dropdownLanguageBtn(for="languageToggleInput")
-                                        | English
-                                        span.icon-arrow
-                                    ul#dropdownLanguageList
-                                        li.lang__active
-                                            a(href="#") English
-                                        li
-                                            a(href="#") 日本語
-                                        li
-                                            a(href="#") Português
-                            .navigation__requestview-btn
-                                a.btn-default(href="javascript:void(0)", data-micromodal-trigger="modalRequestForm")
-                                    span.icon-clock
-                                    | Request Viewing
-    .header__top-row
-        .container-fluid
-            .row.end-xs.middle-xs
-                .col-xs-12.col-sm-8
-                    a.header__top-row__enquire-now(href="javascript:void(0)", data-micromodal-trigger="modalRequestForm")
-                        span.icon-email
-                        | Enquire Now
-                    .header__top-row__contact-info
-                        span.icon-phone
-                        span.header__top-row__contact-info__detail__call Call
-                        a.header__top-row__contact-info__detail__number(href="tel:0120-830-105") 0120-830-105
-                    span.is-time From 09:00 to 21:00
-    input#sdfStartWorkingHour(type="hidden", value="09:00", name="sdfStartWorkingHour")
-    input#sdfStopWorkingHour(type="hidden", value="20:00", name="sdfStopWorkingHour")
-    input#emailRegexFormMsg(type="hidden", value="We require a valid email addressabc")
-    input#requiredFormMsg(type="hidden", value="Please fill in this fieldabc")
+  div.topbar
+    div.itemleft
+        p.overbass Leatherup Canada
+    div.itemleft
+        p.overbass Myleather Wholesale
+    div.itemright
+        div.cartitem
+            img(src="/assets/images/cart.svg", alt="")
+            span.sl 0
+    div.itemright
+        p.overbass Log in
+    div.itemright
+        p.overbass
+            | CALL
+            a(href='') 800-846-6010
+            | /
+            a(href='') Email us
+  div.mainNav.leatherwidth
+    div.leatherpic
+        a(href="")
+            img(src="https://cdn.shopify.com/s/files/1/2694/4876/t/96/assets/icon--full-color-logo.svg?11037", alt="LeatherUp USA")
+    nav 
+        ul.row  
+            li
+                a(href="") JACKETS
+            li
+                a(href="") CHAPS
+            li
+                a(href="") MEN
+            li
+                a(href="") WOMEN
+            li
+                a(href="") HELMETS
+            li
+                a(href="") BOOTS
+            li
+                a(href="") ACCESSORIES 
+            li
+                a(href="") PARTS
+            li
+                a(href="") CLOSEOUTS
+        form(action="/search")
+            svg.icon.icon-search(aria-hidden='true', focusable='false', role='presentation', viewbox='0 0 200 200')
+                path(d='M200 184.4l-46.1-46.1c26-33.7 23.6-82.4-7.2-113.2-33.5-33.5-88.1-33.5-121.6 0s-33.5 88.1 0 121.6c16.8 16.8 38.8 25.1 60.8 25.1 18.5 0 37-6 52.4-17.9l46.1 46.1 15.6-15.6zM40.7 131.1c-24.9-24.9-24.9-65.5 0-90.4C53.2 28.3 69.6 22 85.9 22s32.7 6.2 45.2 18.7c24.9 24.9 24.9 65.5 0 90.4-24.9 24.9-65.5 24.9-90.4 0z')
+            input(type="search" placeholder="Search Products")
+
+  div.subNav
+  div.botNav
