--- a/leaterup-master/src/views/index.pug
+++ b/leaterup-master/src/views/index.pug
@@ -7,10 +7,10 @@ block content
   - var pages = { homePage: '/homepage', testPage: '/test'  }
 
   //- Desktop page
-  section.page.home__page
-    h1.page__title # Index page3
+  //- section.page.home__page
+  //-   h1.page__title # Index page3
 
-    ul(style="list-style: disc; padding-left: 4rem; margin: 4rem 0")
-      each val, index in pages
-        li
-          a(href=val)= index
+  //-   ul(style="list-style: disc; padding-left: 4rem; margin: 4rem 0")
+  //-     each val, index in pages
+  //-       li
+  //-         a(href=val)= index
