--- a/Nhom4_Kempinki/src/views/layouts/master.pug
+++ b/Nhom4_Kempinki/src/views/layouts/master.pug
@@ -53,6 +53,7 @@ html(lang='jp')
     //- block content
     block content
 
+    include ../components/homepage/explore/explore.pug
     include ../components/footer/footer.pug
 
     //- block scripts
