--- a/Nhom4_Kempinki/src/views/components/header/header.scss
+++ b/Nhom4_Kempinki/src/views/components/header/header.scss
@@ -1,376 +1,374 @@
-.header {
-    background: $bg-color-primary;
-    height: 6rem;
-    top: 0;
-    left: 0;
-    width: 100%;
-    position: fixed;
-    z-index: 100;
-    line-height: 2.1rem;
-    display: flex;
-    align-items: center;
+// .header {
+//   background: $bg-color-primary;
+//   height: 6rem;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   position: fixed;
+//   z-index: 100;
+//   line-height: 2.1rem;
+//   display: flex;
+//   align-items: center;
 
-    @include not-mobile {
-        height: 9rem;
-    }
+//   @include not-mobile {
+//     height: 9rem;
+//   }
 
-    &__wrapper {
-        width: 100%;
-        display: flex;
-        padding-right: 1rem;
-        padding-left: 1rem;
-    }
+//   &__wrapper {
+//     width: 100%;
+//     display: flex;
+//     padding-right: 1rem;
+//     padding-left: 1rem;
+//   }
 
-    &__view-request {
+//   &__view-request {
+//     @include not-mobile {
+//       background-color: initial;
+//       color: $text-color-secondary;
+//       padding: 1rem 2.1rem 1rem 0;
+//     }
 
-        @include not-mobile {
-            background-color: initial;
-            color: $text-color-secondary;
-            padding: 1rem 2.1rem 1rem 0;
-        }
+//     img {
+//       height: 4.4rem;
+//       @include not-mobile {
+//         height: 5.7rem;
+//       }
+//     }
+//   }
+// }
 
-        img {
-            height: 4.4rem;
-            @include not-mobile {
-                height: 5.7rem;
-            }
-        }
-    }
-}
+// .navigation {
+//   display: flex;
+//   justify-content: flex-end;
+//   width: 100%;
+//   height: 100%;
 
-.navigation {
-    display: flex;
-    justify-content: flex-end;
-    width: 100%;
-    height: 100%;
+//   .navigation__hamburger-btn {
+//     background-color: $bg-color-primary;
 
-    .navigation__hamburger-btn {
-        background-color: $bg-color-primary;
+//     @include not-mobile {
+//       display: none;
+//     }
+//     .icon-hamburger {
+//       color: $text-color-secondary;
+//       font-size: 2rem;
+//     }
+//   }
 
-        @include not-mobile {
-            display: none;
-        }
-        .icon-hamburger {
-            color: $text-color-secondary;
-            font-size: 2rem;
-        }
-    }
-    
-    a.shortlist {
-        color: $text-color-secondary;
-        display: inline-flex;
-        align-items: center;
-        position: relative;
-        overflow: visible;
-        @include not-mobile {
-            position: static;
-        }
-        span {
-            position: absolute;
-            top: 50%;
-            right: -2.5rem;
-            transform: translateY(-50%);
-            width: 2.2rem;
-            height: 2.2rem;
-            display: inline-block;
-            line-height: normal;
-            margin-left: .5rem;
-            font-size: 1.1rem;
-            padding-top: .3rem;
-            text-align: center;
-            background-repeat: no-repeat;
-            background-size: contain;
-            @include min-sm {
-                top: 0;
-                right: -.8rem;
-                transform: translateY(0);
-            }
-        }
-    } 
-}
+//   a.shortlist {
+//     color: $text-color-secondary;
+//     display: inline-flex;
+//     align-items: center;
+//     position: relative;
+//     overflow: visible;
+//     @include not-mobile {
+//       position: static;
+//     }
+//     span {
+//       position: absolute;
+//       top: 50%;
+//       right: -2.5rem;
+//       transform: translateY(-50%);
+//       width: 2.2rem;
+//       height: 2.2rem;
+//       display: inline-block;
+//       line-height: normal;
+//       margin-left: 0.5rem;
+//       font-size: 1.1rem;
+//       padding-top: 0.3rem;
+//       text-align: center;
+//       background-repeat: no-repeat;
+//       background-size: contain;
+//       @include min-sm {
+//         top: 0;
+//         right: -0.8rem;
+//         transform: translateY(0);
+//       }
+//     }
+//   }
+// }
 
-nav {
-    position: fixed;
-    width: 30rem;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    padding-top: 4rem;
-    background-color: $bg-color-primary;
-    transition: transform .4s ease,-webkit-transform .4s ease;
-    z-index: 99;
-    @include translate3D (100%, 0, 0);
-    
-    &.nav__is-open {
-        height: 100%;
-        @include translate3D (0, 0, 0);
-    }
+// nav {
+//   position: fixed;
+//   width: 30rem;
+//   top: 0;
+//   bottom: 0;
+//   right: 0;
+//   padding-top: 4rem;
+//   background-color: $bg-color-primary;
+//   transition: transform 0.4s ease, -webkit-transform 0.4s ease;
+//   z-index: 99;
+//   @include translate3D(100%, 0, 0);
 
-    @include not-mobile {
-        position: relative;
-        width: auto;
-        padding-top: 0;
-        display: flex;
-        align-items: center;
-        @include translate3D (0, 0, 0);
-    }
+//   &.nav__is-open {
+//     height: 100%;
+//     @include translate3D(0, 0, 0);
+//   }
 
-    .navigation__close-button {
-        display: inline-flex;
-        position: absolute;
-        right: 2rem;
-        top: 2rem;
+//   @include not-mobile {
+//     position: relative;
+//     width: auto;
+//     padding-top: 0;
+//     display: flex;
+//     align-items: center;
+//     @include translate3D(0, 0, 0);
+//   }
 
-        @include not-mobile {
-            display: none;
-        }
+//   .navigation__close-button {
+//     display: inline-flex;
+//     position: absolute;
+//     right: 2rem;
+//     top: 2rem;
 
-        button {
-            background-color: $bg-color-primary;
-            color: $text-color-secondary;
-            font-size: 16px;
-            display: inline-flex;
-            align-content: center;
-            span {
-                margin-left: .5rem;
-            }
-        }
-    }
+//     @include not-mobile {
+//       display: none;
+//     }
 
-    ul.navigation__nav-bar {
-        display: flex;
-        flex-direction: column;
-        @include not-mobile {
-            flex-direction: row;
-            // height: 100%;
-        }
+//     button {
+//       background-color: $bg-color-primary;
+//       color: $text-color-secondary;
+//       font-size: 16px;
+//       display: inline-flex;
+//       align-content: center;
+//       span {
+//         margin-left: 0.5rem;
+//       }
+//     }
+//   }
 
-        > li {
-            position: relative;
-            padding: 0 3rem;
-            @include tablet {
-                padding: 0 1.5rem;
-            }
-            @include desktop {
-                padding: 0 2rem;
-            }
+//   ul.navigation__nav-bar {
+//     display: flex;
+//     flex-direction: column;
+//     @include not-mobile {
+//       flex-direction: row;
+//       // height: 100%;
+//     }
 
-            &:last-child {
-                padding-right: 0;
-            }
+//     > li {
+//       position: relative;
+//       padding: 0 3rem;
+//       @include tablet {
+//         padding: 0 1.5rem;
+//       }
+//       @include desktop {
+//         padding: 0 2rem;
+//       }
 
-            a {
-                color: $text-color-secondary;
-                line-height: 5.3rem;
-                font-size: 20px;
-                letter-spacing: .06rem;
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-                @include not-mobile {
-                    line-height: inherit;
-                    font-size: inherit;
-                    letter-spacing: initial;
-                }
-            }
+//       &:last-child {
+//         padding-right: 0;
+//       }
 
-            .icon-arrow {
-                font-size: 1.5rem;
-                margin-left: .2rem;
-            }
-        }
+//       a {
+//         color: $text-color-secondary;
+//         line-height: 5.3rem;
+//         font-size: 20px;
+//         letter-spacing: 0.06rem;
+//         text-overflow: ellipsis;
+//         white-space: nowrap;
+//         overflow: hidden;
+//         @include not-mobile {
+//           line-height: inherit;
+//           font-size: inherit;
+//           letter-spacing: initial;
+//         }
+//       }
 
-        button {
-            display: none;
-            color: $text-color-secondary;
-            align-items: center;
-            background-color: $bg-color-primary;
-            
-            @include not-mobile {
-                display: inline-flex;
-            }
-        }
-    }
+//       .icon-arrow {
+//         font-size: 1.5rem;
+//         margin-left: 0.2rem;
+//       }
+//     }
 
-    .navigation__requestview-btn {
-        position: absolute;
-        text-align: center;
-        bottom: 2rem;
-        left: 0;
-        right: 0;
+//     button {
+//       display: none;
+//       color: $text-color-secondary;
+//       align-items: center;
+//       background-color: $bg-color-primary;
 
-        @include not-mobile {
-            display: none;
-        }
-        
-        a {
-            display: inline-flex;
-            justify-content: center;
-            align-items: center;
-            padding: 1rem 3rem;
-            background-color: $bg-color-primary;
-            height: 5rem;
-            color: $text-color-secondary;
-            border: 1px solid $bg-color-primary-white;
-            border-radius: .3rem;
-            line-height: 2.6rem;
-            font-size: 1.4rem;
-            span {
-                margin-right: 1rem;
-            }
-        }
-    }
-}
+//       @include not-mobile {
+//         display: inline-flex;
+//       }
+//     }
+//   }
 
-ul#dropdownLanguageList {
-    position: relative;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    font-size: 1.4rem;
+//   .navigation__requestview-btn {
+//     position: absolute;
+//     text-align: center;
+//     bottom: 2rem;
+//     left: 0;
+//     right: 0;
 
-    @include not-mobile {
-        position: absolute;
-        top: 100%;
-        display: none;
-        text-align: left;
-        background-color: $bg-color-primary-white;
-        border: .1rem solid rgba(0,0,0,.15);
-        border-radius: .4rem;
-        box-shadow: 0 .6rem 1.2rem rgba(0,0,0,.175);
-        min-width: 16rem;
-        padding: .5rem 0;
-        margin: .2rem 0 0;
-    }
+//     @include not-mobile {
+//       display: none;
+//     }
 
-    &.open-language {
-        display: block;
-    }
+//     a {
+//       display: inline-flex;
+//       justify-content: center;
+//       align-items: center;
+//       padding: 1rem 3rem;
+//       background-color: $bg-color-primary;
+//       height: 5rem;
+//       color: $text-color-secondary;
+//       border: 1px solid $bg-color-primary-white;
+//       border-radius: 0.3rem;
+//       line-height: 2.6rem;
+//       font-size: 1.4rem;
+//       span {
+//         margin-right: 1rem;
+//       }
+//     }
+//   }
+// }
 
-    li a {
-        display: block;
-        line-height: 5.3rem;
-        font-size: 20px;
-        letter-spacing: .06rem;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
-        @include not-mobile {
-            padding: .3rem 2rem;
-            color: $text-color-black;
-            line-height: 1.42857143;
-            font-size: inherit;
-        }
-    }
-}
+// ul#dropdownLanguageList {
+//   position: relative;
+//   top: 0;
+//   left: 0;
+//   z-index: 100;
+//   font-size: 1.4rem;
 
-.header__top-row {
-    padding: 1rem 0;
-    border-bottom: .1rem solid $header-border-color;
-    text-align: right;
+//   @include not-mobile {
+//     position: absolute;
+//     top: 100%;
+//     display: none;
+//     text-align: left;
+//     background-color: $bg-color-primary-white;
+//     border: 0.1rem solid rgba(0, 0, 0, 0.15);
+//     border-radius: 0.4rem;
+//     box-shadow: 0 0.6rem 1.2rem rgba(0, 0, 0, 0.175);
+//     min-width: 16rem;
+//     padding: 0.5rem 0;
+//     margin: 0.2rem 0 0;
+//   }
 
-    @include not-mobile {
-        padding: .8rem 0 1.2rem 0;
-    }
+//   &.open-language {
+//     display: block;
+//   }
 
-    .logo img {
-        width: 10.8rem;
-        display: block;
-        @include tablet {
-            width: 16rem;
-        }
-        @include desktop {
-            width: 16rem;
-        }
-    }
+//   li a {
+//     display: block;
+//     line-height: 5.3rem;
+//     font-size: 20px;
+//     letter-spacing: 0.06rem;
+//     text-overflow: ellipsis;
+//     white-space: nowrap;
+//     overflow: hidden;
+//     @include not-mobile {
+//       padding: 0.3rem 2rem;
+//       color: $text-color-black;
+//       line-height: 1.42857143;
+//       font-size: inherit;
+//     }
+//   }
+// }
 
-    &__enquire-now {
-        margin-right: 1.5rem;
-        font-weight: 300;
-        font-family: $font-heading;
-        display: inline-flex;
-        align-items: center;
-        line-height: 2.5rem;
-        padding: 1rem 0 .5rem;
+// .header__top-row {
+//   padding: 1rem 0;
+//   border-bottom: 0.1rem solid $header-border-color;
+//   text-align: right;
 
-        @include not-mobile {
-            padding: 0;
-            font-size: 2.2rem;
-            line-height: 3rem;
-        }
-        .icon-email {
-            margin-right: .7rem;
-            font-size: 1.6rem;
-            @include tablet {
-                font-size: 1.7rem;
-            }
-        }
-    }
+//   @include not-mobile {
+//     padding: 0.8rem 0 1.2rem 0;
+//   }
 
-    &__contact-info {
-        height: 100%;
-        display: inline-flex;
-        align-items: center;
-        justify-content: flex-end;
-        flex-wrap: wrap;
-        padding: 1rem 0 .5rem;
+//   .logo img {
+//     width: 10.8rem;
+//     display: block;
+//     @include tablet {
+//       width: 16rem;
+//     }
+//     @include desktop {
+//       width: 16rem;
+//     }
+//   }
 
-        @include not-mobile {
-            padding: 0;
-        }
+//   &__enquire-now {
+//     margin-right: 1.5rem;
+//     font-weight: 300;
+//     font-family: $font-heading;
+//     display: inline-flex;
+//     align-items: center;
+//     line-height: 2.5rem;
+//     padding: 1rem 0 0.5rem;
 
-        .icon-phone {
-            margin-top: -.1rem;
-            color: $text-color-primary;
-            font-size: 1.8rem;
-            margin-right: .5rem;
-        }
+//     @include not-mobile {
+//       padding: 0;
+//       font-size: 2.2rem;
+//       line-height: 3rem;
+//     }
+//     .icon-email {
+//       margin-right: 0.7rem;
+//       font-size: 1.6rem;
+//       @include tablet {
+//         font-size: 1.7rem;
+//       }
+//     }
+//   }
 
-        &__detail {
-            line-height: 3rem;
-            font-size: 2.4rem;
-            color: $text-color-primary;
-            &__call {
-                display: none;
-                font-size: 24px;
-                font-family: $font-heading;
-                margin-right: .5rem;
-                font-weight: 300;
-                @include not-mobile {
-                    display: inline;
-                }
-            }
-            &__number {
-                font-family: $font-heading;
-                margin-right: 0;
-                color: $text-color-primary;
-                font-size: 2rem;
-                line-height: 2.5rem;
-                font-weight: $fontweight-medium;
-                &:hover {
-                    color: color(c-dark-blue-navy);
-                }
-                @include not-mobile {
-                    line-height: 3rem;
-                    font-size: 2.4rem;
-                }
-            }
-        }
-    }
-    
-    .is-time {
-        display: none;
-        color: #99b1bd;
-        position: relative;
-        width: 100%;
-        font-size: 1.8rem;
-        line-height: 2.3rem;
-        @include not-mobile {
-            display: flex;
-            justify-content: flex-end;
-            font-size: 1.6rem;
-            line-height: 1.8rem;
-        }
-    }
-}
+//   &__contact-info {
+//     height: 100%;
+//     display: inline-flex;
+//     align-items: center;
+//     justify-content: flex-end;
+//     flex-wrap: wrap;
+//     padding: 1rem 0 0.5rem;
 
+//     @include not-mobile {
+//       padding: 0;
+//     }
+
+//     .icon-phone {
+//       margin-top: -0.1rem;
+//       color: $text-color-primary;
+//       font-size: 1.8rem;
+//       margin-right: 0.5rem;
+//     }
+
+//     &__detail {
+//       line-height: 3rem;
+//       font-size: 2.4rem;
+//       color: $text-color-primary;
+//       &__call {
+//         display: none;
+//         font-size: 24px;
+//         font-family: $font-heading;
+//         margin-right: 0.5rem;
+//         font-weight: 300;
+//         @include not-mobile {
+//           display: inline;
+//         }
+//       }
+//       &__number {
+//         font-family: $font-heading;
+//         margin-right: 0;
+//         color: $text-color-primary;
+//         font-size: 2rem;
+//         line-height: 2.5rem;
+//         font-weight: $fontweight-medium;
+//         &:hover {
+//           color: color(c-dark-blue-navy);
+//         }
+//         @include not-mobile {
+//           line-height: 3rem;
+//           font-size: 2.4rem;
+//         }
+//       }
+//     }
+//   }
+
+//   .is-time {
+//     display: none;
+//     color: #99b1bd;
+//     position: relative;
+//     width: 100%;
+//     font-size: 1.8rem;
+//     line-height: 2.3rem;
+//     @include not-mobile {
+//       display: flex;
+//       justify-content: flex-end;
+//       font-size: 1.6rem;
+//       line-height: 1.8rem;
+//     }
+//   }
+// }
