--- a/renovation/src/views/components/portfolio/portfolio.pug
+++ b/renovation/src/views/components/portfolio/portfolio.pug
@@ -13,34 +13,34 @@ section.portfolio_area.p_100
         li(data-filter='.residential')
           a(href='#') Residential
     .row.grid_portfolio_area
-      .col-md-4.col-sm-6.col-12.commercial.landscaping
+      .col-lg-4.col-sm-6.col-12.commercial.landscaping
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/home-kitchen-remodel-1024x721.jpg')
-              img.img-fluid(src='../../../assets/images/home-kitchen-remodel-1024x721.jpg' alt='')
+            .light(href='../../../assets/images/Smith-residence.jpg')
+              img.img-fluid(src='../../../assets/images/Smith-residence.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
       .col-lg-4.col-sm-6.col-12.landscaping.residential
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/portfolio-2-1024x512.jpg')
-              img.img-fluid(src='../../../assets/images/portfolio-2-1024x512.jpg' alt='')
+            .light(href='../../../assets/images/portfolio-4.jpg')
+              img.img-fluid(src='../../../assets/images/portfolio-4.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
       .col-lg-4.col-sm-6.col-12.commercial.residential
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/portfolio-3-1024x576.jpg')
-              img.img-fluid(src='../../../assets/images/portfolio-3-1024x576.jpg' alt='')
+            .light(href='../../../assets/images/portfolio-7.jpg')
+              img.img-fluid(src='../../../assets/images/portfolio-7.jpg' alt='')
           .portfolio_text
             a(href='#')
               h4 Kitchen
       .col-lg-4.col-sm-6.col-12.commercial.residential
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/portfolio-4.jpg')
+            .light(href='../../../assets/images/portfolio-4.jpg')
               img.img-fluid(src='../../../assets/images/portfolio-4.jpg' alt='')
           .portfolio_text
             a(href='#')
@@ -48,7 +48,7 @@ section.portfolio_area.p_100
       .col-lg-4.col-sm-6.col-12.landscaping.newconstruction
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/portoflio-5.jpg')
+            .light(href='../../../assets/images/portoflio-5.jpg')
               img.img-fluid(src='../../../assets/images/portoflio-5.jpg' alt='')
           .portfolio_text
             a(href='#')
@@ -56,7 +56,7 @@ section.portfolio_area.p_100
       .col-lg-4.col-sm-6.col-12.newconstruction.residential
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/Brown-Residence.jpg')
+            .light(href='../../../assets/images/Brown-Residence.jpg')
               img.img-fluid(src='../../../assets/images/Brown-Residence.jpg' alt='')
           .portfolio_text
             a(href='#')
@@ -64,7 +64,7 @@ section.portfolio_area.p_100
       .col-lg-4.col-sm-6.col-12.landscaping
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/portfolio-7.jpg')
+            .light(href='../../../assets/images/portfolio-7.jpg')
               img.img-fluid(src='../../../assets/images/portfolio-7.jpg' alt='')
           .portfolio_text
             a(href='#')
@@ -72,7 +72,7 @@ section.portfolio_area.p_100
       .col-lg-4.col-sm-6.col-12.newconstruction
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/Smith-residence.jpg')
+            .light(href='../../../assets/images/Smith-residence.jpg')
               img.img-fluid(src='../../../assets/images/Smith-residence.jpg' alt='')
           .portfolio_text
             a(href='#')
@@ -80,7 +80,7 @@ section.portfolio_area.p_100
       .col-lg-4.col-sm-6.col-12.landscaping.newconstruction
         .portfolio_item
           .portfolio_img
-            a.light(href='../../../assets/images/landscaping-1.jpg')
+            .light(href='../../../assets/images/landscaping-1.jpg')
               img.img-fluid(src='../../../assets/images/landscaping-1.jpg' alt='')
           .portfolio_text
             a(href='#')
